@@ -48,9 +48,6 @@ case "$1" in
 	if [ -e /etc/issue.net.no-lcs ] ; then
     		mv /etc/issue.net.no-lcs /etc/issue.net
 	fi
-	if [ -e /etc/init.d/lcs-sftp ] ; then 
-	 update-rc.d -f lcs-sftp remove
-	fi
         ;;
 
         upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
